# AdventOfCode22

./: README.md
day1/: main.ts  package-lock.json  package.json  tsconfig.json
day10/: .gitignore  main.jspp
day11/: main.nim
day12/: .gitignore  Program.cs
day2/: .gitignore  CMakeLists.txt
day2/src/: PathLoader.hpp  main.cpp
day3/src/: main.rs
day4/: .gitignore  README.md
day4/src/main/scala/: Main.scala
day5/: main.jl
day6/: main.exs
day7/: main.pl
day8/: first.lua  second.lua
day9/: main.d
